tests/fail/stacked_borrows/box_exclusive_violation1.stderr
error: Undefined Behavior: attempting a read access using <TAG> at ALLOC[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/box_exclusive_violation1.rs:LL:CC
   |
LL |   *our
   |   ^^^^
   |   |
   |   attempting a read access using <TAG> at ALLOC[0x0], but that tag does not exist in the borrow stack for this location
   |   this error occurs as part of an access at ALLOC[0x0..0x4]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the Stacked Borrows rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <TAG> was created by a retag at offsets [0x0..0x4]
  --> $DIR/box_exclusive_violation1.rs:LL:CC
   |
LL | / fn demo_mut_advanced_unique(mut our: Box<i32>) -> i32 {
LL | |   unknown_code_1(&*our);
LL | |
LL | |   // This "re-asserts" uniqueness of the reference: After writing, we know
...  |
LL | |   *our
LL | | }
   | |_^
help: <TAG> was later invalidated at offsets [0x0..0x4]
  --> $DIR/box_exclusive_violation1.rs:LL:CC
   |
LL |     *LEAK = 7;
   |     ^^^^^^^^^
   = note: inside `demo_mut_advanced_unique` at $DIR/box_exclusive_violation1.rs:LL:CC
note: inside `main` at $DIR/box_exclusive_violation1.rs:LL:CC
  --> $DIR/box_exclusive_violation1.rs:LL:CC
   |
LL |     demo_mut_advanced_unique(Box::new(0));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

